style.css
/* Root */

@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: 0;
}

/* General Styles */

body {
  background-image: linear-gradient(
    123deg,
    hsl(330, 100%, 45.1%) 0%,
    hsl(331, 89.25%, 47.36%) 8.1%,
    hsl(330.53, 79.69%, 48.96%) 15.6%,
    hsl(328.56, 70.89%, 49.96%) 22.7%,
    hsl(324.94, 63.52%, 50.4%) 29.4%,
    hsl(319.21, 54.99%, 50.3%) 35.7%,
    hsl(310.39, 46.14%, 49.68%) 41.8%,
    hsl(296.53, 39.12%, 49.7%) 47.8%,
    hsl(280.63, 42.91%, 53.43%) 53.7%,
    hsl(265.14, 47.59%, 56.84%) 59.6%,
    hsl(250.13, 52.52%, 59.88%) 65.6%,
    hsl(235.88, 59.2%, 60.91%) 71.8%,
    hsl(225.81, 68.23%, 57.85%) 78.3%,
    hsl(218.93, 74.97%, 54.21%) 85.1%,
    hsl(213.89, 79.63%, 49.97%) 92.3%,
    hsl(210, 100%, 45.1%) 100%
  );
  font-family: "Roboto", sans-serif;
}

.card-wrapper {
  height: 100vh;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.card {
  height: 300px;
  width: 300px;
  background: rgba(255, 255, 255, 0.3);
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  position: relative;
}

.profile {
  height: 100px;
  width: 100px;
  background-position: center;
  background-size: cover;
  border-radius: 50%;
  position: absolute;
  left: 105px;
  top: 30px;
}

.name {
  font-size: 20px;
  font-weight: bold;
}

.occupation {
  color: black;
  font-weight: lighter;
}

.know-more {
  background-color: rgba(37, 36, 36, 0.1);
  position: absolute;
  border-radius: 5px;
  padding: 5px 10px;
  top: 240px;
  left: 105px;
  cursor: pointer;
}

.know-more a {
  text-decoration: none;
  color: black;
}

.know-more:hover {
  border: 1px solid black;
}

/* Member One */

.img1 {
  background-image: url(./images/img1.jpg);
}

.name1 {
  position: absolute;
  top: 155px;
  left: 50px;
}

.occupation1 {
  position: absolute;
  top: 185px;
  left: 89px;
}

/* Member Two */

.img2 {
  background-image: url(./images/img2.jpg);
}

.name2 {
  position: absolute;
  top: 155px;
  left: 110px;
}

.occupation2 {
  position: absolute;
  top: 185px;
  left: 100px;
}

/* Memeber Three */

.img3 {
  background-image: url(./images/img3.jpg);
}

.name3 {
  position: absolute;
  top: 155px;
  left: 75px;
}

.occupation3 {
  position: absolute;
  top: 185px;
  left: 85px;
}

/* Social Media */

.social-media-wrapper {
  display: flex;
  flex-direction: column;
  height: 34%;
  position: absolute;
  left: 0;
  top: 10px;
}

.social {
  color: black;
  width: 60px;
  font-size: 20px;
  padding: 20px 0;
}

.twitter a {
  position: absolute;
  overflow: hidden;
  width: 0;
  transition: 0.5s ease;
  transition-delay: 0.3s;
  text-align: right;
}

.facebook a {
  position: absolute;
  overflow: hidden;
  width: 0;
  transition: 0.7s ease;
  transition-delay: 0.3s;
  text-align: right;
}

.linkedin a {
  position: absolute;
  overflow: hidden;
  width: 0;
  transition: 0.9s ease;
  transition-delay: 0.3s;
  text-align: right;
}
.card:hover .social a {
  width: 100%;
}

.social a:visited {
  color: black;
}

